--- a/index.html
+++ b/index.html
@@ -10,108 +10,143 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./src/style.scss" />
-    <title>Form with validation</title>
+    <title>form-validator</title>
   </head>
   <body>
     <div class="wrapper">
-      <img
-        class="wrapper__img wrapper__img--first"
-        draggable="false"
-        src="./src/img/decor1.svg"
-        alt=""
-      />
-      <img
-        class="wrapper__img wrapper__img--second"
-        draggable="false"
-        src="./src/img/decor2.svg"
-        alt=""
-      />
-      <img
-        class="wrapper__img wrapper__img--third"
-        draggable="false"
-        src="./src/img/decor3.svg"
-        alt=""
-      />
-      <img
-        class="wrapper__img wrapper__img--fourth"
-        draggable="false"
-        src="./src/img/decor4.svg"
-        alt=""
-      />
-      <img
-        class="wrapper__img wrapper__img--fifth"
-        draggable="false"
-        src="./src/img/decor5.svg"
-        alt=""
-      />
-      <img
-        class="wrapper__img wrapper__img--sixth"
-        draggable="false"
-        src="./src/img/decor6.svg"
-        alt=""
-      />
-      <img
-        class="wrapper__img wrapper__img--seventh"
-        draggable="false"
-        src="./src/img/decor7.svg"
-        alt=""
-      />
-      <img
-        class="wrapper__img wrapper__img--eighth"
-        draggable="false"
-        src="./src/img/decor8.svg"
-        alt=""
-      />
-      <div class="login-container">
-        <h2 class="login-container__title text-center">Your logo</h2>
-        <h3 class="login-container__title">Login</h3>
-        <form class="form">
-          <div class="form__input-group">
-            <label class="form__label" for="email">Email</label>
-            <input
-              class="form__input"
-              type="email"
-              id="email"
-              name="email"
-              required
-              placeholder="username@gmail.com"
-            />
-          </div>
-          <div class="form__input-group">
-            <label class="form__label" for="password">Password</label>
-            <div class="form__input-password">
+      <div class="container">
+        <img
+          class="container__img container__img--first"
+          draggable="false"
+          src="./src/img/decor1.svg"
+          alt=""
+        />
+        <img
+          class="container__img container__img--second"
+          draggable="false"
+          src="./src/img/decor2.svg"
+          alt=""
+        />
+        <img
+          class="container__img container__img--third"
+          draggable="false"
+          src="./src/img/decor3.svg"
+          alt=""
+        />
+        <img
+          class="container__img container__img--fourth"
+          draggable="false"
+          src="./src/img/decor4.svg"
+          alt=""
+        />
+        <img
+          class="container__img container__img--fifth"
+          draggable="false"
+          src="./src/img/decor5.svg"
+          alt=""
+        />
+        <img
+          class="container__img container__img--sixth"
+          draggable="false"
+          src="./src/img/decor6.svg"
+          alt=""
+        />
+        <img
+          class="container__img container__img--seventh"
+          draggable="false"
+          src="./src/img/decor7.svg"
+          alt=""
+        />
+        <img
+          class="container__img container__img--eighth"
+          draggable="false"
+          src="./src/img/decor8.svg"
+          alt=""
+        />
+        <div class="login-container">
+          <h2 class="login-container__title text-center">Your logo</h2>
+          <h3 class="login-container__title">Login</h3>
+          <form class="form">
+            <div class="form__input-group">
+              <label class="form__label" for="email">Email</label>
               <input
-                class="form__input form__input--pass"
-                type="password"
-                id="password"
-                name="password"
+                class="form__input"
+                type="email"
+                id="email"
+                name="email"
+                minlength="6"
+                maxlength="30"
                 required
-                placeholder="Password"
+                placeholder="username@gmail.com"
               />
-              <button type="button" class="form__show-btn">
-                <img src="./src/img/eye.svg" alt="" />
-              </button>
             </div>
+            <div class="form__input-group">
+              <label class="form__label" for="password">Password</label>
+              <div class="form__input-password">
+                <input
+                  class="form__input form__input--pass"
+                  type="password"
+                  id="password"
+                  name="password"
+                  minlength="6"
+                  maxlength="30"
+                  required
+                  placeholder="Password"
+                />
+                <button type="button" class="form__toggle-btn">
+                  <svg
+                    class="off"
+                    width="800"
+                    height="800"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M19.707 5.707a1 1 0 0 0-1.414-1.414l-4.261 4.26a4 4 0 0 0-5.478 5.478l-4.261 4.262a1 1 0 1 0 1.414 1.414l4.261-4.26a4 4 0 0 0 5.478-5.478l4.261-4.262Zm-7.189 4.36a2 2 0 0 0-2.45 2.45l2.45-2.45Zm-1.036 3.865 2.45-2.45a2 2 0 0 1-2.45 2.45Zm4.283-9.111C14.63 4.32 13.367 4 12 4 9.148 4 6.757 5.395 4.998 6.906c-1.765 1.517-2.99 3.232-3.534 4.064a1.876 1.876 0 0 0 0 2.06 20.304 20.304 0 0 0 2.748 3.344l1.414-1.414A18.315 18.315 0 0 1 3.18 12c.51-.773 1.598-2.268 3.121-3.577C7.874 7.072 9.816 6 12 6a7.06 7.06 0 0 1 2.22.367l1.545-1.546ZM12 18a7.06 7.06 0 0 1-2.22-.367L8.236 19.18c1.136.5 2.398.821 3.765.821 2.852 0 5.243-1.395 7.002-2.906 1.765-1.517 2.99-3.232 3.534-4.064a1.875 1.875 0 0 0 0-2.06 20.303 20.303 0 0 0-2.748-3.344L18.374 9.04A18.312 18.312 0 0 1 20.82 12c-.51.773-1.598 2.268-3.121 3.577C16.126 16.928 14.184 18 12 18Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                  <svg
+                    class="on"
+                    width="800"
+                    height="800"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M6.301 15.577C4.778 14.268 3.691 12.773 3.18 12c.51-.773 1.598-2.268 3.121-3.577C7.874 7.072 9.816 6 12 6c2.184 0 4.126 1.072 5.699 2.423 1.523 1.309 2.61 2.804 3.121 3.577-.51.773-1.598 2.268-3.121 3.577C16.126 16.928 14.184 18 12 18c-2.184 0-4.126-1.072-5.699-2.423ZM12 4C9.148 4 6.757 5.395 4.998 6.906c-1.765 1.517-2.99 3.232-3.534 4.064a1.876 1.876 0 0 0 0 2.06c.544.832 1.769 2.547 3.534 4.064C6.758 18.605 9.148 20 12 20c2.852 0 5.243-1.395 7.002-2.906 1.765-1.517 2.99-3.232 3.534-4.064a1.875 1.875 0 0 0 0-2.06c-.544-.832-1.769-2.547-3.534-4.064C17.242 5.395 14.852 4 12 4Zm-2 8a2 2 0 1 1 4 0 2 2 0 0 1-4 0Zm2-4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+            <a href="#!" class="form__link">Forgot Password?</a>
+            <button class="form__btn" type="submit">Sign in</button>
+          </form>
+          <p class="login-container__text text-center">or continue with</p>
+          <div class="login-container__btns-group">
+            <button class="login-container__btn" type="button">
+              <img src="./src/img/google.svg" alt="google" />
+            </button>
+            <button class="login-container__btn" type="button">
+              <img src="./src/img/github.svg" alt="github" />
+            </button>
+            <button class="login-container__btn" type="button">
+              <img src="./src/img/facebook.svg" alt="facebook" />
+            </button>
           </div>
-          <a href="#!" class="form__link">Forgot Password?</a>
-          <button class="form__btn" type="button">Sign in</button>
-        </form>
-        <p class="login-container__text text-center">or continue with</p>
-        <div class="login-container__btns-group">
-          <button class="login-container__btn" type="button">
-            <img src="./src/img/google.svg" alt="google" />
-          </button>
-          <button class="login-container__btn" type="button">
-            <img src="./src/img/github.svg" alt="github" />
-          </button>
-          <button class="login-container__btn" type="button">
-            <img src="./src/img/facebook.svg" alt="facebook" />
-          </button>
+          <p class="login-container__text login-container__text--small">
+            Don’t have an account yet?
+            <a class="login-container__link" href="#!">Register for free</a>
+          </p>
         </div>
-        <p class="login-container__text login-container__text--small">
-          Don’t have an account yet?
-          <a class="login-container__link" href="#!">Register for free</a>
-        </p>
       </div>
     </div>
     <script src="./src/js/script.js"></script>
