--- a/index.html
+++ b/index.html
@@ -149,6 +149,6 @@
         </div>
       </div>
     </div>
-    <script src="./src/js/script.js"></script>
+    <script src="./src/js/script.js" type="module"></script>
   </body>
 </html>
